Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12946

onDestruction not called when a ListModel is changed.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.1
    • 4.7.0
    • None
    • Mac OS X 10.6.4 running Qt Creator 2.0.81, based on Qt 4.7.0
    • 57e6192785db1617e233fc4a321da82e5e06ec81

      I have a set of items which are built from a ListModel, when onCompleted is called I store the items into a javascript array.
      If I change the ListModel then new items are built but onDestruction is not called for the original items.

      Please see attached projects files.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            greg Greg Edwards
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes