Don't circumvent onDestruction handlers when clearing expression in delegate cleanup We clear all expressions when removing a delegate in order to avoid spurious warnings.  This also removed onDestruction handlers.  Ensure the onDestruction handlers are called before the expressions are cleared.

Task-number: QTBUG-12946
Reviewed-by: Aaron Kennedy